--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@
       text-align: center;
       padding: 2rem;
       background: #008080;
-      color: white;
+      box-shadow: 0px 0px 15px 15px rgba(7, 201, 185, 0.4);
+      color: white;  
+      position:fixed;
+      width: 100%;
+      z-index: 2;
     }
 
     header h1 {
@@ -17,12 +21,25 @@
       font-size: 2.5rem;
     }
 
-       .timeline {
+    .CajonS{
+    width: 100%;
+    height: 25vh;
+    }
+
+    img{
+    width: 100%; height: 100%;
+    object-fit: contain;
+    box-shadow: 0px 0px 80px gray;
+    margin-top: 10px;
+    }
+
+    .timeline {
       position: relative;
       max-width: 1000px;
       margin: 2rem auto;
       padding: 1rem 0;
-      min-height: 120vh;
+      min-height: 150vh;
+      z-index: 1;
     }
 
     .timeline::after {
@@ -56,12 +73,22 @@
       text-align: left;
     }
 
-    .content {
+    .contentL {
       background-color: white;
       padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       position: relative;
+      border-left: 5px solid #2196F3;
+    }
+
+    .contentR {
+      background-color: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      position: relative;
+      border-right: 5px solid #f3aa21;
     }
 
     .container::before {
@@ -78,10 +105,12 @@
 
     .left::before {
       right: -10px;
+      border-left: 5px solid #2196F3;
     }
 
     .right::before {
       left: -10px;
+      border-right: 5px solid #f3aa21;
     }
 
     @media screen and (max-width: 768px) {
@@ -105,4 +134,29 @@
         left: 10px !important;
         right: auto !important;
       }
+    }
+
+    .containerFLEX {
+      display: flex;
+    }
+    .boxFLEX1 {
+      width: 35%;
+      padding: 20px;
+      background-color: lightblue;
+      text-align: center;
+      border: 1px solid #000;
+    }
+    .boxFLEX1:nth-child(2) {
+      background-color: lightcoral;
+    }
+
+        .boxFLEX2 {
+      width: 65%;
+      padding: 20px;
+      background-color: lightblue;
+      text-align: center;
+      border: 1px solid #000;
+    }
+    .boxFLEX2:nth-child(2) {
+      background-color: lightcoral;
     }
