--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
     header {
       text-align: center;
-      padding: 2rem;
+      /*--padding: 2rem;*/
       background: #008080;
       box-shadow: 0px 0px 15px 15px rgba(7, 201, 185, 0.4);
       color: white;  
@@ -28,7 +28,7 @@
 
     img{
     width: 100%; height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     box-shadow: 0px 0px 80px gray;
     margin-top: 10px;
     }
@@ -139,24 +139,20 @@
     .containerFLEX {
       display: flex;
     }
-    .boxFLEX1 {
+    .boxFLEX {
+      min-width: 15vw;
       width: 35%;
       padding: 20px;
       background-color: lightblue;
       text-align: center;
       border: 1px solid #000;
+      margin: 2rem auto;
     }
-    .boxFLEX1:nth-child(2) {
-      background-color: lightcoral;
-    }
-
-        .boxFLEX2 {
+    .boxFLEX:nth-child(2) {
+      min-width: 20vw;
       width: 65%;
       padding: 20px;
-      background-color: lightblue;
       text-align: center;
       border: 1px solid #000;
-    }
-    .boxFLEX2:nth-child(2) {
       background-color: lightcoral;
     }
