--- a/style.css
+++ b/style.css
@@ -27,10 +27,22 @@
     }
 
     img{
-    width: 100%; height: 100%;
-    object-fit: cover;
+    margin: 5px;
+    width: 95%; height: 95%;
     box-shadow: 0px 0px 80px gray;
-    margin-top: 10px;
+    }
+
+    .Caja{
+    object-fit: cover;
+    width: 45vh;
+    height: 45vh;
+    margin: 0;
+    background-color: white;
+    display:inline-block;
+    overflow: hidden;
+    justify-content: center;
+    text-align:center;
+    border-radius: 10px;
     }
 
     .timeline {
@@ -142,7 +154,7 @@
     .boxFLEX {
       min-width: 15vw;
       width: 35%;
-      padding: 20px;
+      padding: 5px;
       background-color: lightblue;
       text-align: center;
       border: 1px solid #000;
