--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
     header {
       text-align: center;
-      /*--padding: 2rem;*/
       background: #008080;
+      padding-top: 1rem;
       box-shadow: 0px 0px 15px 15px rgba(7, 201, 185, 0.4);
       color: white;  
       position:fixed;
@@ -19,6 +19,8 @@
     header h1 {
       margin: 0;
       font-size: 2.5rem;
+      padding-left: 0;
+      padding-right: 0;
     }
 
     .CajonS{
@@ -168,6 +170,7 @@
       padding: 20px;
       text-align: center;
       border: 1px solid #000;
+      margin: 2rem auto;
       border-left: 0px #2196F3;
       background-color: rgba(0, 0, 0, 0.1);
     }
