--- a/style.css
+++ b/style.css
@@ -23,9 +23,13 @@
       padding-right: 0;
     }
 
+    p{
+      font-size: 1.2rem;
+    }
+
     .CajonS{
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     }
 
     img{
@@ -103,7 +107,7 @@
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       position: relative;
-      border-right: 5px solid #f3aa21;
+      border-right: 5px solid #080602;
     }
 
     .container::before {
@@ -125,7 +129,7 @@
 
     .right::before {
       left: -10px;
-      border-right: 5px solid #f3aa21;
+      border-right: 5px solid #080602;
     }
 
     @media screen and (max-width: 768px) {
@@ -161,7 +165,7 @@
       background-color: lightblue;
       text-align: center;
       border: 1px solid #000;
-      margin: 2rem auto;
+      margin: 1rem auto;
       border-right: 0px #2196F3;
     }
     .boxFLEX:nth-child(2) {
@@ -170,7 +174,7 @@
       padding: 20px;
       text-align: center;
       border: 1px solid #000;
-      margin: 2rem auto;
+      margin: 1rem auto;
       border-left: 0px #2196F3;
       background-color: rgba(0, 0, 0, 0.1);
     }
