--- a/style.css
+++ b/style.css
@@ -193,3 +193,27 @@ body {
       margin: 1.5rem auto;
       border-left: 0px #1976d2;
     }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #008080;
+      color: white;
+    }
+
+    footer a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+
+    .download-button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1.5rem;
+      background-color: white;
+      color: #008080;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+    }
